<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2022-2023 Catch
  ~ [Atom] is licensed under Mulan PSL v2.
  ~ You can use this software according to the terms and conditions of the Mulan PSL v2.
  ~ You may obtain a copy of Mulan PSL v2 at:
  ~          http://license.coscl.org.cn/MulanPSL2
  ~ THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
  ~ EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
  ~ MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
  ~ See the Mulan PSL v2 for more details.
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xmlns="http://maven.apache.org/POM/4.0.0"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.13</version>
		<relativePath/>
	</parent>

	<groupId>net.wenzuo</groupId>
	<artifactId>atom</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>

	<licenses>
		<license>
			<name>Mulan Permissive Software License, Version 2</name>
			<url>https://license.coscl.org.cn/MulanPSL2</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<modules>
		<module>atom-spring-boot-starter-core</module>
		<module>atom-spring-boot-starter-jwt</module>
		<module>atom-spring-boot-starter-mybatis-plus</module>
		<module>atom-spring-boot-starter-redis</module>
		<module>atom-spring-boot-starter-web</module>
		<module>atom-spring-cloud-starter-consul</module>
		<module>atom-spring-cloud-starter-feign</module>
	</modules>

	<scm>
		<url>https://github.com/catch6/atom</url>
		<connection>scm:git:git://github.com/catch6/atom.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/catch6/atom.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<developers>
		<developer>
			<id>Catch</id>
			<name>Catch</name>
			<email>catchlife6@163.com</email>
			<url>https://github.com/catch6</url>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>+8</timezone>
		</developer>
	</developers>

	<properties>
		<java.version>8</java.version>

		<revision>1.0.0</revision>
		<spring-cloud-dependencies.version>2021.0.5</spring-cloud-dependencies.version>
		<spring-cloud-alibaba-dependencies.version>2021.0.5.0</spring-cloud-alibaba-dependencies.version>

		<nimbus-jose-jwt.version>9.31</nimbus-jose-jwt.version>
		<hutool-all.version>5.8.19</hutool-all.version>
		<guava.version>32.0.1-jre</guava.version>
		<mybatis-plus-boot-starter.version>3.5.3.1</mybatis-plus-boot-starter.version>
		<springdoc-openapi-starter-webmvc-ui.version>2.1.0</springdoc-openapi-starter-webmvc-ui.version>
		<easyexcel.version>3.3.2</easyexcel.version>

		<nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
		<maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
		<flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- spring cloud 依赖 -->
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud-dependencies.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!-- spring cloud alibaba 依赖 -->
			<dependency>
				<groupId>com.alibaba.cloud</groupId>
				<artifactId>spring-cloud-alibaba-dependencies</artifactId>
				<version>${spring-cloud-alibaba-dependencies.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- atom 依赖 -->
			<dependency>
				<groupId>net.wenzuo</groupId>
				<artifactId>atom-spring-boot-starter-core</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>net.wenzuo</groupId>
				<artifactId>atom-spring-boot-starter-jwt</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>net.wenzuo</groupId>
				<artifactId>atom-spring-boot-starter-mybatis-plus</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>net.wenzuo</groupId>
				<artifactId>atom-spring-boot-starter-redis</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>net.wenzuo</groupId>
				<artifactId>atom-spring-boot-starter-web</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>net.wenzuo</groupId>
				<artifactId>atom-spring-cloud-starter-consul</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>net.wenzuo</groupId>
				<artifactId>atom-spring-cloud-starter-feign</artifactId>
				<version>${revision}</version>
			</dependency>

			<!-- 第三方依赖 -->
			<dependency>
				<groupId>com.nimbusds</groupId>
				<artifactId>nimbus-jose-jwt</artifactId>
				<version>${nimbus-jose-jwt.version}</version>
			</dependency>
			<dependency>
				<groupId>cn.hutool</groupId>
				<artifactId>hutool-all</artifactId>
				<version>${hutool-all.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>
			<dependency>
				<groupId>com.baomidou</groupId>
				<artifactId>mybatis-plus-boot-starter</artifactId>
				<version>${mybatis-plus-boot-starter.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
				<version>${springdoc-openapi-starter-webmvc-ui.version}</version>
			</dependency>
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>easyexcel</artifactId>
				<version>${easyexcel.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<configuration>
						<outputDirectory>${project.build.directory}/exec</outputDirectory>
						<excludes>
							<exclude>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
							</exclude>
						</excludes>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>${flatten-maven-plugin.version}</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release</id>

			<distributionManagement>
				<snapshotRepository>
					<id>ossrh</id>
					<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
				</snapshotRepository>
				<repository>
					<id>ossrh</id>
					<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
				</repository>
			</distributionManagement>

			<build>
				<plugins>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>${nexus-staging-maven-plugin.version}</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
							<stagingProgressTimeoutMinutes>20</stagingProgressTimeoutMinutes>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>${maven-source-plugin.version}</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>${maven-javadoc-plugin.version}</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
									<encoding>UTF-8</encoding>
									<charset>UTF-8</charset>
									<doclint>none</doclint>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${maven-gpg-plugin.version}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>